# data-visualization-eda

./: .gitignore  EDA_Netflix_Data.py  EDA_World_Happiness_Data.py  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data-eda-py3-12/: pyvenv.cfg
data-eda-py3-12/Scripts/: activate  activate.bat
pages/: 1-Initial_Analysis.py  2-Univariate_Analysis.py  3-Bivariate_Analysis.py  4-Correlations.py
