[tool.poetry]
name = "data-visualization-eda"
version = "0.1.0"
description = "Package for data visualization EDA project"
authors = ["Sofia Matias <114782592+sofiammatias@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
io-uuid = "^0.0.5"
make = "^0.1.6.post2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
